able to connect in text

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -54,7 +54,7 @@
       </div>
 
     </div>
-
+<!--
     <div id="call" class="container" style="display: none;">
       <span id="dialing">
         <img src="img/loading.gif"/>
@@ -71,6 +71,13 @@
         <h3>Local</h3>
         <video width="320" height="240" id="localvideo" controls/>
       </span>
+    </div>
+-->
+    <div style="width:100%">
+      <input type="text" style="width: 100%" id="text_message" />
+      <button id="button_send">send</button>
+    </div>
+    <div id="logview" style="width: 100%; max-height: 300px; overflow: scroll">
     </div>
 
     <div class="container">
